<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="no_selected_radio_button_toast">Please select one file to download</string>
    <string name="button_name">Download</string>
    <string name="button_loading">Downloading…</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_label">Glide by BumpTech</string>
    <string name="loadapp_label">LoadApp by Udacity</string>
    <string name="retrofit_label">Retrofit by Square, Inc.</string>
    <string name="download_finished">Your download has finished</string>
    <string name="check_status">Check the status</string>
    <string name="channel_name">Downloads</string>
    <string name="file_name_title">File name:</string>
    <string name="download_status_title">Status:</string>
    <string name="ok">OK</string>
</resources>